[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/progress_fg.png" type="Texture" id=1]
[ext_resource path="res://textures/progress_bg.png" type="Texture" id=2]
[ext_resource path="res://resources/another.tres" type="Theme" id=3]
[ext_resource path="res://skills/UISkill.gd" type="Script" id=4]
[ext_resource path="res://skills/rest.tres" type="Resource" id=5]

[node name="Skill" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
skill_r = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 465.0
margin_bottom = 705.0

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 450.0
margin_bottom = 31.0

[node name="TitleLabel" type="Label" parent="VBox/HBox"]
margin_right = 28.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 31 )
text = "Rest"
valign = 1

[node name="TextureProgress" type="TextureProgress" parent="VBox/HBox"]
margin_left = 32.0
margin_right = 332.0
margin_bottom = 31.0
theme = ExtResource( 3 )
max_value = 5.0
value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="Label" type="Label" parent="VBox/HBox/TextureProgress"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "20/5"
align = 1

[node name="BatchLabel" type="Label" parent="VBox"]
margin_top = 35.0
margin_right = 450.0
margin_bottom = 49.0
text = "Each batch has 3 hp"

[node name="LevelUpBtn" type="Button" parent="VBox"]
margin_top = 53.0
margin_right = 450.0
margin_bottom = 80.0
text = "Level up Rest"
